@@ -584,7 +584,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTI
 CAPTION "Terminator"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Run All",IDC_RUN_ALL,172,252,50,14
+    DEFPUSHBUTTON   "Run Selected",IDC_RUNSELECTED,163,252,59,14
     PUSHBUTTON      "Close",IDOK,226,252,50,14
     CONTROL         "",IDC_TERMINATOR_LIST,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,21,269,225
     LTEXT           "Static",IDC_TERMINATOR_TEXT,7,7,269,8
